--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f0f4f8;
+  /*background-color: #f0f4f8;*/
+    background: linear-gradient(135deg, #cecccf 0%, #aa94f7 100%);
+  background-attachment: fixed; /* Fija el gradiente al scroll */
 }
 
 code {
